[package]
name = "sdnotify"
version = "0.1.3"
authors = ["Alexander Polakov <plhk@sdf.org>"]
description = "Notify service manager about start-up completion and other daemon status changes"
license = "MIT"
homepage = "https://github.com/polachok/sdnotify"
repository = "https://github.com/polachok/sdnotify"
documentation = "https://docs.rs/sdnotify"
edition = "2018"
keywords = ["systemd"]

[dependencies]
tokio-codec = { version = "0.1", optional = true }
tokio-uds = { version = "0.2", optional = true }
futures = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }

bytes5 = { package = "bytes", version = "0.5", optional = true }
tokio2 = { package = "tokio", version = "0.2", features = ["net", "uds", "stream"], optional = true }
tokio-util = { version = "0.3", features = ["codec"], optional = true }

[features]
async_io = [ "tokio-uds", "tokio-codec", "futures", "bytes" ]
async_await = [ "tokio2", "tokio-util" ]
default = ["async_await"]

[dev-dependencies]
#tokio = "0.1"
