[package]
name = "sdnotify"
version = "0.2.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
description = "Notify service manager about start-up completion and other daemon status changes"
license = "MIT"
homepage = "https://github.com/polachok/sdnotify"
repository = "https://github.com/polachok/sdnotify"
documentation = "https://docs.rs/sdnotify"
edition = "2018"
keywords = ["systemd"]

[dependencies]
tokio-codec = { version = "0.1", optional = true }
tokio-uds = { version = "0.2", optional = true }
futures = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }

tokio1 = { package = "tokio", version = "1", features = ["net"], optional = true }

[features]
async_io = [ "tokio-uds", "tokio-codec", "futures", "bytes" ]
async_await = [ "tokio1" ]
default = ["async_await"]

[dev-dependencies]
tokio = "0.1"
